--- a/source/src/agar/common/scaler/sse2/CMakeLists.txt
+++ b/source/src/agar/common/scaler/sse2/CMakeLists.txt
@@ -1,8 +1,8 @@
-message("* ui-agar/scaler/sse2")
+message("* agar/common/scaler/sse2")
 
 #set(CMAKE_BUILD_SETTING_C_FLAGS "${CMAKE_C_FLAGS} -msse2 -msse -mmmx")
 add_compile_options(-msse2 -msse -mmmx) 
-add_library(xm7_scaler-sse2
+add_library(common_scaler-sse2
 			       scaler_x1_sse2.c
 			       scaler_x125_sse2.c
 			       scaler_x15_sse2.c
