--- a/source/src/vm/fm7/vram/generic/CMakeLists.txt
+++ b/source/src/vm/fm7/vram/generic/CMakeLists.txt
@@ -1,6 +1,6 @@
-message("* sdl/vram/generic")
+message("* vm/fm7/vram/generic")
 
-add_library(xm7_vram-generic api_vram256k.c
+add_library(fm7_vram-generic api_vram256k.c
                    api_vram4096.c
                    api_vram8.c
                    api_vramvec.c
