[WIP][Agar] Build fit to CSP.

--- a/source/build-cmake/fm7/CMakeLists.txt
+++ b/source/build-cmake/fm7/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_minimum_required (VERSION 2.6)
 cmake_policy(SET CMP0011 NEW)
 
 message("")
-message("** Start of configure XM7/SDL,Agar **")
+message("** Start of configure CommonSourceProject,FM-7, Agar **")
 message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
@@ -30,59 +30,7 @@ set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.
 
 include(config_commonsource)
 
-set(WITH_AGAR_STATIC ON CACHE BOOL "Link LibAgar statically.")
-set(WITH_LIBAGAR_PREFIX "/usr/local" CACHE STRING "Set prefix of LibAgar") 
-include_directories(${WITH_LIBAGAR_PREFIX}/include/agar)
-
-if(WITH_AGAR_STATIC)
-  set(AGAR_LIBS ${WITH_LIBAGAR_PREFIX}/lib/libag_dev.a ${WITH_LIBAGAR_PREFIX}/lib/libag_gui.a ${WITH_LIBAGAR_PREFIX}/lib/libag_core.a)
-else(WITH_AGAR_STATIC)
-  set(AGAR_LIBS ag_core ag_dev ag_gui)
-  link_directories(${WITH_LIBAGAR_PREFIX}/lib)
-endif()
-
-set(AGAR_DEPLIBS m jpeg png z dl uim-scm uim Xinerama)
-
-
-find_package(Gettext)
-include_directories(${GETTEXT_INCLUDE_PATH})
-include(compile_gettext_catalogue)
-
-find_package(Freetype)
-include_directories(${FREETYPE_INCLUDE_PATH})
-
-find_package(Iconv)
-
-
-if(USE_OPENMP)
-  find_package(OpenMP)
-  include_directories(${OPENMP_INCLUDE_PATH})
-endif()
-
-find_package(Threads)
-include_directories(${THREADS_INCLUDE_PATH})
-
-find_package(SDL)
-include_directories(${SDL_INCLUDE_PATH})
-
-
-if(ICONV_FOUND)
- include_directories(${ICONV_INCLUDE_DIRS})
- set(LOCAL_LIBS ${LOCAL_LIBS} ${ICONV_LIBRARIES})
-endif()
-
-
-# GCC Only?
-if(CMAKE_COMPILER_IS_GNUCC) 
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flax-vector-conversions")
-endif()
-
-if(CMAKE_COMPILER_IS_GNUCXX) 
- set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -flax-vector-conversions")
-endif()
-
-
-include(simd-x86)
+add_definitions(-D_FM7)
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
