[WIP][Build][Agar] Prepare to build with Agar.

--- a/source/src/vm/x1/CMakeLists.txt
+++ b/source/src/vm/x1/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 2.6)
 message("* vm/x1")
 
 add_library(vm_x1
-	wdisplay.cpp
+	display.cpp
 	emm.cpp
 	floppy.cpp
 	io.cpp
