--- a/source/build-cmake/x1/CMakeLists.txt
+++ b/source/build-cmake/x1/CMakeLists.txt
@@ -3,18 +3,17 @@
 # This is part of XM7/SDL, but license is apache 2.2,
 # this part was written only me.
 
-
 cmake_minimum_required (VERSION 2.6)
 cmake_policy(SET CMP0011 NEW)
 
 message("")
-message("** Start of configure CommonSourceProject,FM-7, Agar **")
+message("** Start of configure CommonSourceProject,X1, Agar **")
 message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 
-project (emufm7)
+project (emux1)
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
@@ -28,26 +27,26 @@ include(detect_target_cpu)
 # set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
-add_definitions(-D_FM7)
+
+add_definitions(-D_X1)
 
 include(config_commonsource)
 
+
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fm7)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fm7/vram/generic)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/x1)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
 
 add_subdirectory(../../src/vm vm/)
-#add_subdirectory(../../src/vm/fm7 vm/fm7)
-add_subdirectory(../../src/vm/fm7/vram/generic vm/fm7/vram/generic)
+add_subdirectory(../../src/vm/x1 vm/x1)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
 
 if(USE_SSE2)
-  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fm7/vram/sse2)
-  add_subdirectory(../../src/vm/fm7/vram/sse2 vm/fm7/vram/sse2)
+#  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fm7/vram/sse2)
+#  add_subdirectory(../../src/vm/fm7/vram/sse2 vm/fm7/vram/sse2)
 endif()
 
 if(USE_SSE2)
- include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/agar/common/scaler/sse2)
+# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/agar/common/scaler/sse2)
 endif()
