--- a/source/src/vm/fmgen/CMakeLists.txt
+++ b/source/src/vm/fmgen/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 2.6)
 message("* vm/fmgen")
 
 add_library(vm_fmgen
-	             file.cpp
+#	             file.cpp
 	             fmgen.cpp
 		     fmtimer.cpp
 		     opm.cpp
