[General][Agar] PC8801MA Build. [Build][Agar] compile with leastest files.

--- a/source/build-cmake/pc8801ma/CMakeLists.txt
+++ b/source/build-cmake/pc8801ma/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Build Common Sourcecode Project, Agar.
 # (C) 2014 K.Ohta <whatisthis.sowhat@gmail.com>
-# This is part of XM7/SDL, but license is apache 2.2,
+# This is part of , but license is apache 2.2,
 # this part was written only me.
 
 cmake_minimum_required (VERSION 2.6)
@@ -13,35 +13,37 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 
-project (emux1)
+project (emupc8801ma)
 
-set(EXEC_TARGET emux1)
+set(EXEC_TARGET emupc8801ma)
 
-set(LOCAL_LIBS 	   vm_x1
+set(LOCAL_LIBS 	   vm_pc88
 		   vm_vm
 		   common_common
 		   vm_fmgen
 		   common_scaler-generic
 		   agar_ui
-		   agar_x1
+		   agar_pc88ma
 		   agar_menu
                    )
 
 set(VMFILES
 		   z80.cpp
 		   mcs48.cpp
-# X1 Twin
-#		   huc6280.cpp
-# X1 Turbo
-#		   z80dma.cpp
+#
+		   z80dma.cpp
 #
 		   beep.cpp
-		   hd46505.cpp
+		   i8251.cpp
 		   i8255.cpp
-		   ym2151.cpp
-		   ym2203.cpp
-		   mb8877.cpp
+		   pcm1bit.cpp
+		   pc80s31k.cpp
 		   upd1990a.cpp
+		   upd765a.cpp
+		   
+		   i8253.cpp
+		   ym2203.cpp
+		   
 		   z80ctc.cpp
 		   z80pio.cpp
 		   z80sio.cpp
@@ -67,19 +69,19 @@ include(detect_target_cpu)
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 
-add_definitions(-D_X1)
-add_definitions(-DUSE_TAPE)
-add_definitions(-DUSE_FD1)
-add_definitions(-DUSE_FD1)
+add_definitions(-D_PC8801MA)
+#add_definitions(-DUSE_TAPE)
+#add_definitions(-DUSE_FD1)
+#add_definitions(-DUSE_FD1)
 
 include(config_commonsource)
 
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/x1)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/pc8801)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/agar/x1)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/agar/pc8801ma)
 
 
 
@@ -93,9 +95,9 @@ if(USE_SSE2)
 # include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/agar/common/scaler/sse2)
 endif()
 
-add_subdirectory(../../src/vm/x1 vm/x1)
+add_subdirectory(../../src/vm/pc8801 vm/pc8801)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/agar/x1 agar/x1)
+add_subdirectory(../../src/agar/pc8801ma agar/pc8801ma)
 
 set(BUNDLE_LIBS 
 			   ${AGAR_LIBS}
