--- a/source/src/vm/pc8801/CMakeLists.txt
+++ b/source/src/vm/pc8801/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/x1")
+message("* vm/pc8801")
 
-add_library(vm_pc8801
+add_library(vm_pc88
 	pc88.cpp
 	pc8801.cpp
 )
