[Draw][GL][UI][Qt] Okay, signal and Painting via Opengl is enabled now, You must MOC. see, qt/common/CMakeLists.txt.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -1,6 +1,15 @@
 message("* qt/common")
 
- 
+set(s_qt_common_headers
+#	  emu_utils.h
+	  qt_dialogs.h
+#	  qt_emuevents.h
+	  qt_gldraw.h
+#	  qt_input.h
+)
+
+QT4_WRAP_CPP(s_qt_common_headers_MOC ${s_qt_common_headers})
+
 add_executable(${EXEC_TARGET}
 	  emuevents_control.cpp
 	  emu_utils.cpp
@@ -14,7 +23,9 @@ add_executable(${EXEC_TARGET}
 	  sdl_sound.cpp
 	  qt_debugger.cpp
 	  sdl_cpuid.c
+	  ${s_qt_common_headers_MOC}
 )
+
 target_link_libraries(${EXEC_TARGET} ${LOCAL_LIBS} ${BUNDLE_LIBS})
 
 install(TARGETS ${EXEC_TARGET} DESTINATION bin)
