--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -8,6 +8,7 @@ QT4_WRAP_CPP(s_qt_gui_headers_MOC ${s_qt_gui_headers})
 add_library(qt_gui
 	  menu_control.cpp
 	  menu_disk.cpp
+	  menu_cmt.cpp
 	  ${s_qt_gui_headers_MOC}
 )
 
