--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(qt_gui
 	  menu_control.cpp
 	  menu_disk.cpp
 	  menu_cmt.cpp
+	  display_statusbar.cpp
 	  ${s_qt_gui_headers_MOC}
 )
 
