[General][Qt] Cleanup sourcecode of GUI; made abstraction.

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -1,6 +1,7 @@
 message("* qt/gui")
 set(s_qt_gui_headers
 	  commonclasses.h
+	  mainwidget.h
 )
 QT4_WRAP_CPP(s_qt_gui_headers_MOC ${s_qt_gui_headers})
 
@@ -9,6 +10,7 @@ add_library(qt_gui
 	  menu_control.cpp
 	  menu_disk.cpp
 	  menu_cmt.cpp
+	  menu_main.cpp
 	  display_statusbar.cpp
 	  ${s_qt_gui_headers_MOC}
 )
