[UI][Qt] Add "Sound" Menu.

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(qt_gui
 	  menu_disk.cpp
 	  menu_cmt.cpp
 	  menu_main.cpp
+	  menu_sound.cpp
 	  display_statusbar.cpp
 	  ${s_qt_gui_headers_MOC}
 )
