--- a/source/src/vm/mz700/CMakeLists.txt
+++ b/source/src/vm/mz700/CMakeLists.txt
@@ -2,6 +2,38 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/mz700")
 
+if(BUILD_MZ800)
+
+add_library(vm_mz700
+	cmos.cpp
+	emm.cpp
+	kanji.cpp
+	keyboard.cpp
+	memory.cpp
+	mz700.cpp
+	ramfile.cpp
+	floppy.cpp
+	quickdisk.cpp
+)
+
+elseif(BUILD_MZ1500)
+
+add_library(vm_mz700
+	cmos.cpp
+	emm.cpp
+	kanji.cpp
+	keyboard.cpp
+	memory.cpp
+	mz700.cpp
+	ramfile.cpp
+	floppy.cpp
+	quickdisk.cpp
+	ramfile.cpp
+	psg.cpp
+)
+
+else()
+
 add_library(vm_mz700
 	cmos.cpp
 	emm.cpp
@@ -12,20 +44,5 @@ add_library(vm_mz700
 	ramfile.cpp
 )
 
-if(BUILD_MZ800)
-add_library(vm_mz700
-	floppy.cpp
-	quickdisk.cpp
-)
-endif()
 
-if(BUILD_MZ1500)
-if(not BUILD_MZ800)
-add_library(vm_mz700
-	floppy.cpp
-	quickdisk.cpp
-	ramfile.cpp
-	psg.cpp
-)
-endif()
 endif()
