[UI][Qt] Add supporting of QuickDIsk. [UI][Qt] Fix some bugs on CMT.

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -9,6 +9,7 @@ QT4_WRAP_CPP(s_qt_gui_headers_MOC ${s_qt_gui_headers})
 add_library(qt_gui
 	  menu_control.cpp
 	  menu_disk.cpp
+	  menu_quickdisk.cpp
 	  menu_cmt.cpp
 	  menu_main.cpp
 	  menu_sound.cpp
