[OSD][Qt] Add displaying futures on status bar. [General][Qt] Launch threads via Qt::QThread, not SDL.

--- a/source/build-cmake/x1turboz/CMakeLists.txt
+++ b/source/build-cmake/x1turboz/CMakeLists.txt
@@ -66,6 +66,8 @@ set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.
 
 
 add_definitions(-D_X1TURBOZ)
+add_definitions(-DDATAREC_SOUND)
+
 #add_definitions(-DUSE_TAPE)
 #add_definitions(-DUSE_FD1)
 #add_definitions(-DUSE_FD1)
