--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(qt_gui
 	  menu_cmt.cpp
 	  menu_main.cpp
 	  menu_sound.cpp
+	  menu_screen.cpp
 	  display_statusbar.cpp
 	  ${s_qt_gui_headers_MOC}
 )
