[UI][Qt] Menu: Add cartridge(s).

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(qt_gui
 	  menu_disk.cpp
 	  menu_quickdisk.cpp
 	  menu_cmt.cpp
+	  menu_cart.cpp
 	  menu_main.cpp
 	  menu_sound.cpp
 	  menu_screen.cpp
@@ -19,6 +20,7 @@ add_library(qt_gui
 	  util_fd.cpp
 	  util_cmt.cpp
 	  util_qd.cpp
+	  util_cart.cpp
 	  display_statusbar.cpp
 	  ${s_qt_gui_headers_MOC}
 )
