[VM][PC98] Improve support PC9801x, still not working.

--- a/source/src/vm/pc8801/CMakeLists.txt
+++ b/source/src/vm/pc8801/CMakeLists.txt
@@ -2,7 +2,14 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/pc8801")
 
+if(BUILD_PC98DO)
+add_library(vm_pc88
+	pc88.cpp
+#	pc8801.cpp
+)
+else()
 add_library(vm_pc88
 	pc88.cpp
 	pc8801.cpp
 )
+endif()
