[VM]Add PC6001/6601.

--- a/source/build-cmake/pc9801e/CMakeLists.txt
+++ b/source/build-cmake/pc9801e/CMakeLists.txt
@@ -50,9 +50,9 @@ set(VMFILES
 set(BUILD_SHARED_LIBS OFF)
 
 set(BUILD_PC9801 OFF CACHE BOOL "Build on PC9801")
-set(BUILD_PC9801E OFF CACHE BOOL "Build on PC9801E")
+set(BUILD_PC9801E ON CACHE BOOL "Build on PC9801E")
 set(BUILD_PC9801VF OFF CACHE BOOL "Build on PC9801VF")
-set(BUILD_PC9801VM ON CACHE BOOL "Build on PC9801VM")
+set(BUILD_PC9801VM OFF CACHE BOOL "Build on PC9801VM")
 set(BUILD_PC98DO OFF CACHE BOOL "Build on PC98DO")
 
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
