[General[Qt] Add PC9801U and PC-Engine.

--- a/source/src/vm/pc9801/CMakeLists.txt
+++ b/source/src/vm/pc9801/CMakeLists.txt
@@ -17,6 +17,8 @@ if(BUILD_PC9801)
   add_library(vm_pc98  ${BASIC_VM_FILES} cmt.cpp )
 elseif(BUILD_PC9801E) 
   add_library(vm_pc98  ${BASIC_VM_FILES} cmt.cpp )
+elseif(BUILD_PC9801U) 
+  add_library(vm_pc98  ${BASIC_VM_FILES} cmt.cpp )
 elseif(BUILD_PC9801VF) 
   add_library(vm_pc98  ${BASIC_VM_FILES} )
 elseif(BUILD_PC9801VM) 
