[VM][Sound][Qt] CMT: Enable sound of casette tape, if enabled.

--- a/source/build-cmake/mz700/CMakeLists.txt
+++ b/source/build-cmake/mz700/CMakeLists.txt
@@ -59,7 +59,7 @@ set(VMFILES_MZ1500 ${VMFILES_MZ800}
 
 set(BUILD_MZ800 OFF CACHE BOOL "Build EMU-MZ800")
 set(BUILD_MZ1500 OFF CACHE BOOL "Build EMU-MZ1500")
-set(USE_CMT_SOUND OFF CACHE BOOL "Using sound with CMT")
+set(USE_CMT_SOUND ON CACHE BOOL "Using sound with CMT")
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
