[UI][Qt][CMT] MZ : Apply playing status to menu.

--- a/source/build-cmake/mz80k/CMakeLists.txt
+++ b/source/build-cmake/mz80k/CMakeLists.txt
@@ -44,7 +44,7 @@ set(VMFILES_BASE
 
 set(BUILD_MZ80A OFF CACHE BOOL "Build EMU-MZ80A")
 set(BUILD_MZ1200 OFF CACHE BOOL "Build EMU-MZ1200")
-set(USE_CMT_SOUND OFF CACHE BOOL "Using sound with CMT")
+set(USE_CMT_SOUND ON CACHE BOOL "Using sound with CMT")
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
