[UI][CMT] Add cmt-sound.

--- a/source/build-cmake/mz800/CMakeLists.txt
+++ b/source/build-cmake/mz800/CMakeLists.txt
@@ -7,79 +7,108 @@ cmake_minimum_required (VERSION 2.8)
 cmake_policy(SET CMP0011 NEW)
 
 message("")
-message("** Start of configure CommonSourceProject,MSX1, Qt **")
+message("** Start of configure CommonSourceProject,MZ-800, Qt **")
 message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 
-project (emumsx1)
+project (emumz800)
 
-set(EXEC_TARGET emumsx1)
-
-set(LOCAL_LIBS 	   vm_msx1
+set(LOCAL_LIBS 	   vm_mz700
 		   vm_vm
 		   common_common
 		   vm_fmgen
 #		   common_scaler-generic
-		   qt_msx1
+		   qt_mz700
 		   qt_gui
                    )
 
 set(VMFILES_BASE
-  z80.cpp
-  tms9918a.cpp
+		   z80.cpp
+		   beep.cpp
+		   i8255.cpp
+		   i8253.cpp
+		   pcm1bit.cpp
+		   
+		   datarec.cpp
+		   
+		   and.cpp
 
-  not.cpp
-  i8255.cpp
-  
-  ym2203.cpp
-  pcm1bit.cpp
-  
-  #  
-  datarec.cpp
-  event.cpp
-  io.cpp
-  memory.cpp
+		   event.cpp
+		   io.cpp
+		   memory.cpp
 )
 
+set(VMFILES_MZ800 ${VMFILES_BASE}
+		   mb8877.cpp
+		   disk.cpp
+		   
+		   not.cpp
+		   sn76489an.cpp
+		   z80pio.cpp
+		   z80sio.cpp
+)
 
-set(BUILD_PX7 OFF CACHE BOOL "Build for Pioneer PX7")
-set(USE_CMT_SOUND ON CACHE BOOL "Sound with CMT")
+set(VMFILES_MZ1500 ${VMFILES_MZ800}
+		   ym2203.cpp
+)
+		   
+
+
+set(BUILD_MZ800 ON CACHE BOOL "Build EMU-MZ800")
+set(BUILD_MZ1500 OFF CACHE BOOL "Build EMU-MZ1500")
+set(USE_CMT_SOUND ON CACHE BOOL "Using sound with CMT")
+
+set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENCL ON CACHE BOOL "Build using OpenCL")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
+set(XM7_VERSION 3)
 #set(WITH_DEBUGGER ON CACHE BOOL "Build witnDebugger.")
-
-set(VMFILES_PX7 ${VMFILES_BASE}
-                ld700.cpp
-)
-if(USE_CMT_SOUND)
-       set(VMFILES_MSX ${VMFILES_BASE})
-endif()
 
 include(detect_target_cpu)
 #include(windows-mingw-cross)
 # set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
-if(BUILD_PX7)
-  set(VMFILES ${VMFILES_PX7})
-  add_definitions(-D_PX7)
+
+if(BUILD_MZ1500)
+
+set(VMFILES ${VMFILES_MZ1500})
+add_definitions(-D_MZ1500)
+set(EXEC_TARGET emumz1500)
+
+elseif(BUILD_MZ800)
+
+set(VMFILES ${VMFILES_MZ800})
+add_definitions(-D_MZ800)
+set(EXEC_TARGET emumz800)
+
 else()
-  set(VMFILES ${VMFILES_MSX})
-  add_definitions(-D_MSX1)
+
+set(VMFILES ${VMFILES_BASE})
+add_definitions(-D_MZ700)
+set(EXEC_TARGET emumz700)
+
 endif()
 
+if(USE_CMT_SOUND)
 add_definitions(-DDATAREC_SOUND)
+endif()
+
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/msx1)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/mz700)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/msx1)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/mz700)
+
 
 include(config_commonsource)
+
+
 
 if(USE_SSE2)
 #  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fm7/vram/sse2)
@@ -91,9 +120,9 @@ if(USE_SSE2)
 # include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/common/scaler/sse2)
 endif()
 
-add_subdirectory(../../src/vm/msx1 vm/msx1)
+add_subdirectory(../../src/vm/mz700 vm/mz700)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/msx1 qt/msx1)
+add_subdirectory(../../src/qt/mz700 qt/mz700)
 
      
 add_subdirectory(../../src/qt/common qt/common)
