--- a/source/build-cmake/pc6601/CMakeLists.txt
+++ b/source/build-cmake/pc6601/CMakeLists.txt
@@ -50,6 +50,7 @@ set(BUILD_PC6001MK2 OFF CACHE BOOL "Build on PC6001mk2")
 set(BUILD_PC6001MK2SR OFF CACHE BOOL "Build on PC6001mk2SR")
 set(BUILD_PC6601 ON CACHE BOOL "Build on PC6601")
 set(BUILD_PC6601SR OFF CACHE BOOL "Build on PC6601SR")
+set(USE_CMT_SOUND ON CACHE BOOL "Sound with CMT")
 
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENCL ON CACHE BOOL "Build using OpenCL if enabled.")
@@ -92,6 +93,9 @@ elseif(BUILD_PC6601SR)
    set(VMFILES ${VMFILES}
        upd7752.cpp
    )
+endif()
+if(USE_CMT_SOUND)
+   add_definitions(-DDATAREC_SOUND)
 endif()
 
 
