--- a/source/build-cmake/pc8001sr/CMakeLists.txt
+++ b/source/build-cmake/pc8001sr/CMakeLists.txt
@@ -57,6 +57,7 @@ set(BUILD_PC8801MA OFF CACHE BOOL "Build with PC8801MA")
 set(USE_OPNA ON CACHE BOOL "Use OPNA sound with PC8801MA")
 set(USE_PCG  ON CACHE BOOL "Use PCG8100")
 set(PC88_EXTRAM_PAGES  "1" CACHE STRING "Set banks of EXTRAM of PC8001, bank = 32Kbytes")
+set(USE_CMT_SOUND OFF CACHE BOOL "Sound with Data Recorder.")
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENCL ON CACHE BOOL "Build using OpenCL if enabled.")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
@@ -97,6 +98,9 @@ endif()
 if(USE_OPNA)
   add_definitions(-DSUPPORT_PC88_OPNA)
 endif()  
+if(USE_CMT_SOUND)
+  add_definitions(-DDATAREC_SOUND)
+endif()
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
