--- a/source/build-cmake/pc9801u/CMakeLists.txt
+++ b/source/build-cmake/pc9801u/CMakeLists.txt
@@ -55,6 +55,7 @@ set(BUILD_PC9801U ON CACHE BOOL "Build on PC9801U")
 set(BUILD_PC9801VF OFF CACHE BOOL "Build on PC9801VF")
 set(BUILD_PC9801VM OFF CACHE BOOL "Build on PC9801VM")
 set(BUILD_PC98DO OFF CACHE BOOL "Build on PC98DO")
+set(USE_CMT_SOUND OFF CACHE BOOL "Sound with Data Recorder.")
 
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENCL ON CACHE BOOL "Build using OpenCL if enabled.")
@@ -76,6 +77,9 @@ if(BUILD_PC9801)
        z80.cpp
        not.cpp
    )
+   if(USE_CMT_SOUND)
+       add_definitions(-DDATAREC_SOUND)
+   endif()
 elseif(BUILD_PC9801E)
    add_definitions(-D_PC9801E)
    set(EXEC_TARGET emupc9801e)
@@ -85,6 +89,9 @@ elseif(BUILD_PC9801E)
        i286.cpp
        z80.cpp
    )
+   if(USE_CMT_SOUND)
+       add_definitions(-DDATAREC_SOUND)
+   endif()
 elseif(BUILD_PC9801U)
    add_definitions(-D_PC9801U)
    set(EXEC_TARGET emupc9801u)
@@ -129,6 +136,9 @@ elseif(BUILD_PC98DO)
    set(LOCAL_LIBS ${LOCAL_LIBS}
        vm_pc88
    )
+   if(USE_CMT_SOUND)
+       add_definitions(-DDATAREC_SOUND)
+   endif()
 endif()
 
 
