[VM][FM7] Floppy working(at least reading).

--- a/source/build-cmake/fm7/CMakeLists.txt
+++ b/source/build-cmake/fm7/CMakeLists.txt
@@ -28,7 +28,7 @@ set(LOCAL_LIBS 	   vm_fm7
 set(VMFILES
 		   mc6809.cpp
 #
-		   beep.cpp
+		   pcm1bit.cpp
 		   mb8877.cpp
 		   
 		   ym2203.cpp
