--- a/source/src/vm/fm7/CMakeLists.txt
+++ b/source/src/vm/fm7/CMakeLists.txt
@@ -5,6 +5,8 @@ message("* vm/fm7")
 add_library(vm_fm7
 	display.cpp
 	keyboard.cpp
+	sound.cpp
+	floppy.cpp
 	fm7_mainio.cpp
 	fm7_mainmem.cpp
 	kanjirom.cpp
